footer fixed / spacing between element fixed

--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -1,8 +1,7 @@
 @use 'src/styles/vars';
 
 .app {
-    
-    height: 100vh;
+    min-height: calc(100vh - 40px);
     display: flex;
     flex-direction: column;
     
