--- a/src/components/MyExperience/myexperience.scss
+++ b/src/components/MyExperience/myexperience.scss
@@ -24,7 +24,6 @@
         justify-content: center;
         align-items: center;
         align-self: center;
-        margin-bottom: vars.$gutter*3;
     
 
         &-title{
