--- a/src/components/Project/project.scss
+++ b/src/components/Project/project.scss
@@ -24,7 +24,7 @@
         align-items: center;
         align-self: center;
         margin-bottom: vars.$gutter*3;
-        padding-top: vars.$gutter*10;
+        padding-top: vars.$gutter*5;
     
 
         &-title{
